# work-tracker

./: .env.example  .gitignore  README.md  pyproject.toml  start.cmd
docs/: ARCHITECTURE.md
examples/: areas.json  ownership.json  project_plan.md  repos.yaml  schedule.yaml  team_members.yaml
tests/: __init__.py  test_core.py  test_openai_review.py  test_server.py  test_ui_contract.py
work_tracker/: __init__.py  analyzer.py  cli.py  config.py  git_tracker.py  local_review.py  models.py  openai_review.py  reporter.py  scanner.py  semantic_diff.py  server.py
work_tracker/assets/: dashboard.css  dashboard.js  portfolio.css
work_tracker/templates/: dashboard.html  portfolio.html
