[project]
name = "work-tracker"
version = "1.0.0"
description = "Local-first project intelligence: architecture, Git activity, change tracking, risks, and dashboards."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

[project.scripts]
work-tracker = "work_tracker.cli:main"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
