[project]
name = "work-tracker"
version = "1.1.1"
description = "Local-first project intelligence: architecture, Git activity, change tracking, risks, and dashboards."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

[project.scripts]
work-tracker = "work_tracker.cli:main"

[tool.setuptools.package-data]
work_tracker = ["assets/*.css", "assets/*.js", "templates/*.html"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
